--- a/app/src/main/res/drawable/ic_trending_up.xml
+++ b/app/src/main/res/drawable/ic_trending_up.xml
@@ -1,12 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="?attr/colorOnSurface">
-    
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M12,3L4,9v12h5v-7h6v7h5V9L12,3zM12,5.7L18,10v9h-1v-7H7v7H6V10L12,5.7z"/>
-    
+        android:pathData="M16,6l2.29,2.29 -4.88,4.88 -4,-4L2,16.59 3.41,18l6,-6 4,4 6.3,-6.29L22,12V6z"/>
 </vector>
